Fixes double stamp on mobile, sticky on safari

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -987,8 +987,7 @@ nav a {
 
   .nav-tabs,
   .mobile-hide,
-  #footer-section,
-  .stamps {
+  #footer-section {
     display: none;
   }
 
